bug76329 Time line labels are not centered
bug76329 Time line labels are not centered

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_teamschedule.scss
@@ -1261,14 +1261,13 @@ teams-time-picker.ng-invalid-dst {
 				width: 60px;
 
 				.time-label {
-					text-align: center;
-
 					.label {
 						font-size: x-small;
 						height: 1.32em;
 						z-index: 11;
 						transform: translateX(-50%);
-						padding: 0 0.3em;
+						padding: 0.1em 0.3em;
+						display: inline-block;
 						background-color: $gray-500;
 
 						&.highlight {
